@@ -2,7 +2,7 @@ Summary: The Red Hat package management system.
 Name: rpm
 %define version 3.0.4
 Version: %{version}
-Release: 0.28
+Release: 0.29
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-3.0.x/rpm-%{version}.tar.gz
 Copyright: GPL
@@ -167,4 +167,3 @@ fi
 /usr/lib/libpopt.la
 /usr/lib/libpopt.so
 /usr/include/popt.h
-
